# bgoss

./: README.md  pyproject.toml
bgoss/: bgoss.py
